--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,1 +1,5 @@
-$colorPrimary:#774286;
+$colorPrimary:#67AD2B;
+$colorSecundary:#f2f2f2;
+$colorTextInputs:lightgrey;
+$colorBorderInputs:#808080;
+$colorHover:#48771f;
